--- a/index.html
+++ b/index.html
@@ -10,13 +10,12 @@
 			type="image/x-icon"
 		/>
 		<script src="scripts/script.js" defer></script>
-		<title>COC CWL Base Showcase</title>
+		<title>Isabelle's Showcase Site</title>
 	</head>
 	<body>
 		<!-- Showcase area -->
 		<section id="showcase">
-			<h1 id="title">COC CWL Bases</h1>
-			<hr />
+			<h1 id="title">TH17 bases</h1>
 
 			<img id="baseImg" src="" alt="Selected base layout" />
 
@@ -43,7 +42,8 @@
 				</div>
 			</div>
 		</section>
-        <div id="nav">
+
+		<div id="nav">
 			<!-- Month navigation -->
 			<nav id="nav-month" class="nav-bar">
 				<button id="prev-month" disabled>← Prev Month</button>
@@ -54,7 +54,7 @@
 			<!-- Base navigation -->
 			<nav id="nav-base" class="nav-bar">
 				<button id="prev-base" disabled>← Prev Base</button>
-				<span id="current-base">Base 1</span>
+				<span id="current-base">Base 1</span>
 				<button id="next-base" disabled>Next Base →</button>
 			</nav>
 		</div>
