Stuff and thingsies :3

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 	<body>
 		<!-- Showcase area -->
 		<section id="showcase">
-			<h1 id="title">TH17 bases</h1>
+			<h1 id="title">Isabelle's TH17 base showcase site</h1>
 
 			<img id="baseImg" src="" alt="Selected base layout" />
 
