--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
 	<body>
 		<!-- Showcase area -->
 		<section id="showcase">
+			<a href="https://github.com/isabelle1309/COCBaseShowcase">
+				<img id="github" src="images/github.png" alt="Github logo">
+			</a>
 			<h1 id="title">Isabelle's TH17 base showcase site</h1>
 
 			<img id="baseImg" src="" alt="Selected base layout" />
