base url data insert

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 	</head>
 	<body>
 		<!-- Showcase area -->
-		<section id="showcase">
+		<section id="showcase" class="center">
 			<a href="https://github.com/isabelle1309/COCBaseShowcase">
 				<img id="github" src="images/github.png" alt="Github logo">
 			</a>
@@ -44,9 +44,12 @@
 					<p id="xbText" class="info-text"></p>
 				</div>
 			</div>
-		</section>
 
-		<div id="nav">
+			<div id="baseLink">
+				<a href="">Copy this base</a>
+			</div>
+		</section>
+		<div id="nav" class="center">
 			<!-- Month navigation -->
 			<nav id="nav-month" class="nav-bar">
 				<button id="prev-month" disabled>← Prev Month</button>
