--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 			</div>
 
 			<div id="baseLink">
-				<a href="">Copy this base</a>
+				<a href="">Click here to copy the base</a>
 			</div>
 		</section>
 		<div id="nav" class="center">
