--- a/index.html
+++ b/index.html
@@ -44,9 +44,11 @@
 					<p id="xbText" class="info-text"></p>
 				</div>
 			</div>
-
-			<div id="baseLink">
-				<a href="">Click here to copy the base</a>
+			<div>
+				<h2>
+					<a href="" id="baseLink">Click here to copy the base</a>
+				</h2>
+				
 			</div>
 		</section>
 		<div id="nav" class="center">
