Responsive warning for smaller aspect ratios

--- a/index.html
+++ b/index.html
@@ -11,8 +11,12 @@
 		/>
 		<script src="scripts/script.js" defer></script>
 		<title>Isabelle's Showcase Site</title>
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	</head>
 	<body>
+		<div id="ratioWarning" class="center">
+			Please rotate your screen to see the full website.
+		  </div>		  
 		<!-- Showcase area -->
 		<section id="showcase" class="center">
 			<a href="https://github.com/isabelle1309/COCBaseShowcase">
