More responsive thingsies

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 				</div>
 			</div>
 			<div>
-				<h2>
+				<h2 id="baseLinkHeader">
 					<a href="" id="baseLink">Click here to copy the base</a>
 				</h2>
 				
