Variable spell tower images initial commit

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 				<div class="info-section">
 					<img
 						id="spelltower"
-						src="images/ST.png"
+						src="images/STR.png"
 						alt="Spell Tower"
 					/>
 					<p id="stText" class="info-text"></p>
