spell tower images

--- a/index.html
+++ b/index.html
@@ -28,23 +28,15 @@
 
 			<div id="baseInfo">
 				<div class="info-section">
-					<img
-						id="clancastle"
-						src="images/CC.png"
-						alt="Clan Castle"
-					/>
+					<img id="clancastle" src="images/CC.png" alt="Clan Castle"/>
 					<p id="ccText" class="info-text"></p>
 				</div>
 				<div class="info-section">
-					<img
-						id="spelltower"
-						src="images/STR.png"
-						alt="Spell Tower"
-					/>
+					<img id="spelltower" src="images/STR.png" alt="Spell Tower"/>
 					<p id="stText" class="info-text"></p>
 				</div>
 				<div class="info-section">
-					<img id="xbow" src="images/xbow.png" alt="X‑bow" />
+					<img id="xbow" src="images/xbow.png" alt="X-bow" />
 					<p id="xbText" class="info-text"></p>
 				</div>
 			</div>
