--- a/index.html
+++ b/index.html
@@ -11,16 +11,16 @@
 		/>
 		<script src="scripts/script.js" defer></script>
 		<title>Isabelle's Showcase Site</title>
-		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 	</head>
 	<body>
 		<div id="ratioWarning" class="center">
 			Please rotate your screen to see the full website.
-		  </div>		  
+		</div>
 		<!-- Showcase area -->
 		<section id="showcase" class="center">
 			<a href="https://github.com/isabelle1309/COCBaseShowcase">
-				<img id="github" src="images/github.png" alt="Github logo">
+				<img id="github" src="images/github.png" alt="Github logo" />
 			</a>
 			<h1 id="title">Isabelle's TH17 base showcase site</h1>
 
@@ -28,15 +28,35 @@
 
 			<div id="baseInfo">
 				<div class="info-section">
-					<img id="clancastle" src="images/CC.png" alt="Clan Castle"/>
+					<img
+						id="clancastle"
+						src="images/CC.png"
+						alt="Clan Castle configuration"
+					/>
 					<p id="ccText" class="info-text"></p>
 				</div>
 				<div class="info-section">
-					<img id="spelltower" src="images/STR.png" alt="Spell Tower"/>
+					<img
+						id="spelltower"
+						src="images/STR.png"
+						alt="Spell Tower configuration"
+					/>
 					<p id="stText" class="info-text"></p>
 				</div>
 				<div class="info-section">
-					<img id="xbow" src="images/xbow.png" alt="X-bow" />
+					<img
+						id="infernotower"
+						src="images/ITM.png"
+						alt="Inferno Tower configuration"
+					/>
+					<p id="itText" class="info-text"></p>
+				</div>
+				<div class="info-section">
+					<img
+						id="xbow"
+						src="images/XBG.png"
+						alt="X-bow configuration"
+					/>
 					<p id="xbText" class="info-text"></p>
 				</div>
 			</div>
@@ -44,7 +64,6 @@
 				<h2 id="baseLinkHeader">
 					<a href="" id="baseLink">Click here to copy the base</a>
 				</h2>
-				
 			</div>
 		</section>
 		<div id="nav" class="center">
