Base nav update

--- a/index.html
+++ b/index.html
@@ -17,7 +17,6 @@
 		<div id="ratioWarning" class="center">
 			Please rotate your screen to see the full website.
 		</div>
-		<!-- Showcase area -->
 		<section id="showcase" class="center">
 			<a href="https://github.com/isabelle1309/COCBaseShowcase">
 				<img id="github" src="images/github.png" alt="Github logo" />
@@ -75,10 +74,11 @@
 			</nav>
 
 			<!-- Base navigation -->
+			<span id="current-base">Base 1</span>
 			<nav id="nav-base" class="nav-bar">
-				<button id="prev-base" disabled>← Prev Base</button>
-				<span id="current-base">Base 1</span>
-				<button id="next-base" disabled>Next Base →</button>
+				<button id="prev-base" disabled>←</button>
+				<button id="next-base" disabled>→</button>
+				
 			</nav>
 		</div>
 	</body>
