cc troop images

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 			<a href="https://github.com/isabelle1309/COCBaseShowcase">
 				<img id="github" src="images/github.png" alt="Github logo" />
 			</a>
-			<h1 id="title">Isabelle's TH17 base showcase site</h1>
+			<h1 id="title">Isabelle's TH17 base layout website</h1>
 
 			<img id="baseImg" src="" alt="Selected base layout" />
 
