New layout first commit

--- a/index.html
+++ b/index.html
@@ -18,23 +18,15 @@
 			Please rotate your screen to see the full website.
 		</div>
 		<section id="showcase" class="center">
-			<a href="https://github.com/isabelle1309/COCBaseShowcase">
-				<img id="github" src="images/github.png" alt="Github logo" />
+			<a id="github" href="https://github.com/isabelle1309/COCBaseShowcase">
 			</a>
-			<h1 id="title">Isabelle's TH17 base layout website</h1>
-
 			<img id="baseImg" src="" alt="Selected base layout" />
 
 			<div id="baseInfo">
-				<div class="info-section">
-					<img
-						id="clancastle"
-						src="images/CC.png"
-						alt="Clan Castle configuration"
-					/>
+				<div id="cc-section" class="baseSection">
 					<p id="ccText" class="info-text"></p>
 				</div>
-				<div class="info-section">
+				<div id="st-section" class="baseSection">
 					<img
 						id="spelltower"
 						src="images/STR.png"
@@ -42,7 +34,7 @@
 					/>
 					<p id="stText" class="info-text"></p>
 				</div>
-				<div class="info-section">
+				<div id="it-section" class="baseSection">
 					<img
 						id="infernotower"
 						src="images/ITM.png"
@@ -50,7 +42,7 @@
 					/>
 					<p id="itText" class="info-text"></p>
 				</div>
-				<div class="info-section">
+				<div id="xb-section" class="baseSection">
 					<img
 						id="xbow"
 						src="images/XBG.png"
