--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
 
 			<div id="baseInfo">
 				<div id="cc-section" class="baseSection">
-					<p id="ccText" class="info-text"></p>
-				</div>
+					<div id="ccGrid" class="cc-grid"></div>
+				  </div>
 				<div id="st-section" class="baseSection">
 					<img
 						id="spelltower"
