Seperate subject boxes

--- a/index.html
+++ b/index.html
@@ -18,15 +18,23 @@
 			Please rotate your screen to see the full website.
 		</div>
 		<section id="showcase" class="center">
-			<a id="github" href="https://github.com/isabelle1309/COCBaseShowcase">
+			<a
+				id="github"
+				href="https://github.com/isabelle1309/COCBaseShowcase"
+			>
+				<img src="images/github.png" alt="github image" />
 			</a>
+			<p id="title">Isabelle's TH17 base layout website</p>
+			<img id="basebg" src="images/base.png" alt="" />
 			<img id="baseImg" src="" alt="Selected base layout" />
 
 			<div id="baseInfo">
 				<div id="cc-section" class="baseSection">
+					<img id="ccbg" src="images/cc.png" alt="">
 					<div id="ccGrid" class="cc-grid"></div>
-				  </div>
+				</div>
 				<div id="st-section" class="baseSection">
+					<img id="stbg" src="images/spelltower.png" alt="" />
 					<img
 						id="spelltower"
 						src="images/STR.png"
@@ -35,6 +43,7 @@
 					<p id="stText" class="info-text"></p>
 				</div>
 				<div id="it-section" class="baseSection">
+					<img id="itbg" src="images/inferno.png" alt="" />
 					<img
 						id="infernotower"
 						src="images/ITM.png"
@@ -43,6 +52,8 @@
 					<p id="itText" class="info-text"></p>
 				</div>
 				<div id="xb-section" class="baseSection">
+					<img id="xbbg" src="images/xbow.png" alt="" />
+					
 					<img
 						id="xbow"
 						src="images/XBG.png"
@@ -70,7 +81,6 @@
 			<nav id="nav-base" class="nav-bar">
 				<button id="prev-base" disabled>←</button>
 				<button id="next-base" disabled>→</button>
-				
 			</nav>
 		</div>
 	</body>
