--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
 			<div id="baseInfo">
 				<div id="cc-section" class="baseSection">
-					<img id="ccbg" src="images/cc.png" alt="">
+					<img id="ccbg" src="images/CC.png" alt="">
 					<div id="ccGrid" class="cc-grid"></div>
 				</div>
 				<div id="st-section" class="baseSection">
