more positioning shit

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
 			<div id="baseInfo">
 				<div id="cc-section" class="baseSection">
-					<img id="ccbg" src="images/CC.png" alt="">
+					<img id="ccbg" src="images/CC.png" alt="" />
 					<div id="ccGrid" class="cc-grid"></div>
 				</div>
 				<div id="st-section" class="baseSection">
@@ -53,7 +53,7 @@
 				</div>
 				<div id="xb-section" class="baseSection">
 					<img id="xbbg" src="images/xbow.png" alt="" />
-					
+
 					<img
 						id="xbow"
 						src="images/XBG.png"
