--- a/index.html
+++ b/index.html
@@ -66,6 +66,9 @@
 				<h2 id="baseLinkHeader">
 					<a href="" id="baseLink">Click here to copy the base</a>
 				</h2>
+				<h2 id="baseStatsHeader">
+					<a href="" id="baseStats">Click here to see statistics</a>
+				</h2>
 			</div>
 		</section>
 		<div id="nav" class="center">
