close modal image

--- a/index.html
+++ b/index.html
@@ -67,8 +67,14 @@
 					<a href="" id="baseLink">Click here to copy the base</a>
 				</h2>
 				<h2 id="baseStatsHeader">
-					<a href="" id="baseStats">Click here to see statistics</a>
+					<a href="#" id="baseStats">Click here to see statistics</a>
 				</h2>
+			</div>
+			<div id="baseStatsModal">
+				<p>Base statistics</p>
+				<a id="modal-close" href="#">
+					<img src="images/button-close.png" alt="">
+				</a>
 			</div>
 		</section>
 		<div id="nav" class="center">
