--- a/index.html
+++ b/index.html
@@ -71,10 +71,13 @@
 				</h2>
 			</div>
 			<div id="baseStatsModal">
-				<p>Base statistics</p>
+				<p id="baseStatsTitle">Base statistics</p>
 				<a id="modal-close" href="#">
 					<img src="images/button-close.png" alt="">
 				</a>
+				<div id="baseData">
+					
+				</div>
 			</div>
 		</section>
 		<div id="nav" class="center">
